--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="src/section1.js"></script>
+    <script src="./src/review.js"></script>
+    <script src="./src/section1.js"></script>
+    <script src="./src/test-conditional-types.js"></script>
   </body>
 </html>
